recursion.cons.lessons.recursion.cons.Length.scala.error
length:3: error: illegal start of simple pattern
    case []=0
         ^length:5: error: '=>' expected but '}' found.
  }} 
  ^