recursion.cons.lessons.recursion.cons.Length.scala.code
def length(l:List[Int]): Int = {
  l match {
    case []=0
    case t::q =>1+length(q)
  }}